Added Ads auto-play with banner plugin. Updated click animation.

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -93,7 +93,9 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"></ListView>
+                app:layout_constraintVertical_bias="0.0">
+
+            </ListView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -185,20 +187,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txWelcome" />
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="1300dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="32dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bgBar"
-                app:srcCompat="@drawable/bg_bar" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/accounts"
@@ -660,14 +648,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="24dp"
-                android:fontFamily="sans-serif-medium"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
+                android:fontFamily="sans-serif-condensed-medium"
                 android:text="@string/harvest_more_benefit"
                 android:textColor="#FFFFFF"
-                android:textSize="32sp"
+                android:textSize="39sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/bgStatementBox" />
 
@@ -675,15 +662,23 @@
                 android:id="@+id/benefitDiscription"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
                 android:fontFamily="sans-serif-thin"
                 android:text="@string/benefit_description"
+                android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="@+id/titleHarvestMore"
+                app:layout_constraintStart_toStartOf="@+id/titleHarvestMore"
+                app:layout_constraintTop_toBottomOf="@+id/titleHarvestMore" />
+
+            <com.youth.banner.Banner
+                android:id="@+id/banner"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/titleHarvestMore" />
+                app:layout_constraintTop_toBottomOf="@+id/benefitDiscription" />
 
             <ImageView
                 android:id="@+id/bgBar1"
@@ -702,7 +697,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/benefitDiscription"
+                app:layout_constraintTop_toBottomOf="@+id/banner"
                 app:srcCompat="@drawable/bg_content_bar_1" />
 
             <ImageView
@@ -721,6 +716,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginBottom="32dp"
+                app:layout_constraintBottom_toTopOf="@+id/bgCopyright"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/bgContentBar2"
                 app:srcCompat="@drawable/bg_content_bar_3" />
@@ -811,6 +808,16 @@
                 app:layout_constraintEnd_toEndOf="@+id/bgContentBar3"
                 app:layout_constraintStart_toEndOf="@+id/icon_browse_more"
                 app:layout_constraintTop_toTopOf="@+id/icon_browse_more" />
+
+            <ImageView
+                android:id="@+id/bgCopyright"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:srcCompat="@drawable/bg_copyright" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
